--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
     <footer id="footer"></footer>
     <script>
-      fetch("/header.html")
+      fetch("header.html")
         .then((response) => response.text())
         .then((data) => {
           document.getElementById("header").innerHTML = data;
