fix: 경로 수정으로 GitHub Pages 대응

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         .then(() => {
           // 별도 script 파일 로드
           const script = document.createElement("script");
-          script.src = "/js/header.js";
+          script.src = "/sajo/js/header.js";
           document.body.appendChild(script);
         });
     </script>
