--- a/index.html
+++ b/index.html
@@ -4,62 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>사조그룹-클론코딩</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/xpressengine/xeicon@2.3.3/xeicon.min.css"
+    />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/ani.css" />
   </head>
   <body>
-    <header id="header"></header>
-    <main id="main">
-      <div class="content-wrap">
-        <div id="visual">
-          <ul class="scroll">
-            <li class="active">
-              <a href="#">
-                <!-- <img src="./images/banner_visual_01.jpg" /> -->
-              </a>
-              <div class="text">
-                <em
-                  >언제 어디서나 고객이 안심하고 선택할 수 있는 기업,
-                  사조입니다.</em
-                >
-                <span
-                  >고객에게 믿음을 드리는
-                  <strong>엄격한 품질 관리</strong></span
-                >
-                <p>
-                  고객의 안전하고 건강한 생활을 위한 엄격한 품질 관리와 가장
-                  좋은 원료를 신선하고 위생적으로 가공하여<br />
-                  최고의 맛을 선사하겠다는 의지와 열정은 사조 가족의 소명입니다.
-                </p>
+    <div id="wrap">
+      <header id="header"></header>
+      <main id="main">
+        <div class="content-wrap">
+          <div id="visual">
+            <ul class="scroll">
+              <li>
+                <div class="inner">
+                  <div class="text">
+                    <em
+                      >언제 어디서나 고객이 안심하고 선택할 수 있는 기업,
+                      사조입니다.</em
+                    >
+                    <span
+                      >고객에게 믿음을 드리는
+                      <strong>엄격한 품질 관리</strong></span
+                    >
+                    <p>
+                      고객의 안전하고 건강한 생활을 위한 엄격한 품질 관리와 가장
+                      좋은 원료를 신선하고 위생적으로 가공하여<br />
+                      최고의 맛을 선사하겠다는 의지와 열정은 사조 가족의
+                      소명입니다.
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="text">
+                  <strong>나눔과 사회공헌활동을<br />실천하는 사조</strong>
+                  <p>
+                    사조그룹의 경영철학인 도전, 신뢰, 열정을<br />
+                    바탕으로 사회적, 환경적 관심사를 분석,<br />수용하고
+                    사회에서 기대하는 사회적 의무를<br />
+                    다하기 위하여 사회공헌활동을<br />기업의 경영활동에 수용,
+                    노력합니다.
+                  </p>
+                </div>
+              </li>
+            </ul>
+            <div class="pagination-btn">
+              <span class="on"></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="arrow">
+              <div class="inner">
+                <i class="xi-angle-left-thin"></i>
+                <i class="xi-angle-right-thin"></i>
               </div>
-            </li>
-            <li>
-              <a href="#"></a>
-              <div class="text">
-                <strong>나눔과 사회공헌활동을 실천하는 사조</strong>
-                <p>
-                  사조그룹의 경영철학인 도전, 신뢰, 열정을 바탕으로 사회적,
-                  환경적 관심사를 분석, 수용하고 사회에서 기대하는 사회적 의무를
-                  다하기 위하여 사회공헌활동을 기업의 경영활동에 수용,
-                  노력합니다.
-                </p>
-              </div>
-            </li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
+            </div>
+          </div>
+          <div class="con content1"></div>
+          <div class="con content2"></div>
+          <div class="con content3"></div>
+          <div class="con content4"></div>
+          <div class="con content5"></div>
         </div>
-        <div class="con content1"></div>
-        <div class="con content2"></div>
-        <div class="con content3"></div>
-        <div class="con content4"></div>
-        <div class="con content5"></div>
-      </div>
-    </main>
-    <footer id="footer"></footer>
+      </main>
+      <footer id="footer"></footer>
+    </div>
     <script>
       fetch("header.html")
         .then((response) => response.text())
@@ -69,7 +83,7 @@
         .then(() => {
           // 별도 script 파일 로드
           const script = document.createElement("script");
-          script.src = "/sajo/js/header.js";
+          script.src = "./js/header.js";
           document.body.appendChild(script);
         });
     </script>
