--- a/index.html
+++ b/index.html
@@ -87,5 +87,7 @@
           document.body.appendChild(script);
         });
     </script>
+    <script src="js/data.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
