--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/ani.css" />
+    <link rel="stylesheet" href="./css/content.css" />
   </head>
   <body>
     <div id="wrap">
       <header id="header"></header>
       <main id="main">
-        <div class="content-wrap">
-          <div id="visual">
+        <div id="visual">
+          <div class="ul-wrap">
             <ul class="scroll">
               <li>
                 <div class="inner">
@@ -58,18 +59,112 @@
               <span></span>
               <span></span>
             </div>
-            <div class="arrow">
-              <div class="inner">
-                <i class="xi-angle-left-thin"></i>
-                <i class="xi-angle-right-thin"></i>
+          </div>
+          <div class="arrow">
+            <div class="inner">
+              <i class="xi-angle-left-thin"></i>
+              <i class="xi-angle-right-thin"></i>
+            </div>
+          </div>
+        </div>
+        <!-- visual -->
+        <div id="content">
+          <div class="con content1">
+            <div class="inner">
+              <div class="box left">
+                <div class="box-wrap">
+                  <h3>SAJO News</h3>
+                  <div class="bigimg">
+                    <a href=""><img src="./images/0186.jpg" alt="" /></a>
+
+                    <div class="text">
+                      <a href="">
+                        <h4>푸디스트, 장마철 대비 전 사업장 안전 점검 실시</h4>
+                        <p>
+                          식자재 전문기업 푸디스트가 장마철 집중호우와 강풍으로
+                          인한 안전사고를 예방하기 위해 특별 점검을 실시했다고
+                          18일 밝혔다. 이번 점검은 전국 급식 사업장, 물류센터,
+                          직영 마트 등 모든 사업장을 대상으로 진행됐다.
+                        </p>
+                        <p>2025.06.18</p></a
+                      >
+                    </div>
+                  </div>
+                  <ul>
+                    <li>
+                      <a href="#"
+                        ><span
+                          >푸디스트, “구내식당이 가성비 맛집”…상반기 위탁급식
+                          식수 25% 증가
+                        </span></a
+                      >
+                      <p>2025.06.12</p>
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span
+                          >사조대림, 이색 원물 만두 2종 출시… “통째로 넣었다”
+                        </span></a
+                      >
+                      <p>2025.06.02</p>
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span>
+                          사조대림, `쟌슨빌 캔햄` 광고 모델로 추성훈 발탁
+                        </span></a
+                      >
+                      <p>2025.05.30</p>
+                    </li>
+                  </ul>
+                  <div class="btn"><i class="xi-plus">더보기</i></div>
+                </div>
+              </div>
+              <div class="box right">
+                <h3>SAJO Recipe</h3>
+                <div class="bigimg">
+                  <a href="#"
+                    ><img src="./images/dr_2453524.jpg" alt="아보카도튀김"
+                  /></a>
+
+                  <div class="text">
+                    <a href="#">
+                      <h4>해표 바삭요리유를 사용한 아보카도 튀김 레시피</h4>
+                      <p>아보카도튀김</p>
+                    </a>
+                  </div>
+                </div>
+                <div class="simg-wrap">
+                  <div class="simg">
+                    <a href="#"
+                      ><img
+                        src="./images/dr_sam_0101.jpg"
+                        alt="짜장참치춘권 레시피"
+                    /></a>
+                    <a href="#">
+                      <h4>짜장참치춘권 레시피</h4>
+                    </a>
+                  </div>
+                  <div class="simg">
+                    <a href=""
+                      ><img
+                        src="./images/dr_sam_0001.jpg"
+                        alt="사조홍게액 명절탕국 레시피"
+                    /></a>
+                    <a href="">
+                      <h4>사조홍게액 명절탕국 레시피</h4>
+                    </a>
+                  </div>
+                </div>
+                <div class="btn"><i class="xi-plus">더보기</i></div>
               </div>
             </div>
           </div>
-          <div class="con content1"></div>
-          <div class="con content2"></div>
-          <div class="con content3"></div>
-          <div class="con content4"></div>
-          <div class="con content5"></div>
+          <div class="con content2">
+            <div class="inner"></div>
+          </div>
+          <div class="con content3"><div class="inner"></div></div>
+          <div class="con content4"><div class="inner"></div></div>
         </div>
       </main>
       <footer id="footer"></footer>
