--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                   </a>
                 </div>
               </div>
+              <div class="btn"><i class="xi-plus">더보기</i></div>
             </div>
           </div>
           <div class="con content4"><div class="inner"></div></div>
