--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
   <body>
     <div class="inner">
       <div class="customer">
-        <div class="call">
+        <div class="tel">
           <strong>소비자 상담전화</strong>
           <p>
             평일 09:00 ~17:00 운영 <br />
@@ -18,10 +18,20 @@
           </p>
         </div>
         <div class="foot-btn">
-          <span>연락처 보기 +</span>
-          <span>FAMILY SITE +</span>
+          <span class="tel-btn">연락처 보기 +</span>
+          <span class="site-btn">FAMILY SITE +</span>
         </div>
       </div>
+      <div class="tel-popup">
+        <strong> 사조그룹 소비자 상담전화 </strong> <i class="xi-close"></i>
+        <ul>
+          <!-- <li>
+            <span>사조대림</span>
+            <p>080-900-6133</p>
+          </li> -->
+        </ul>
+      </div>
+      <div class="site-popup"></div>
       <div class="foot-bottom">
         <div class="link-area">
           <p>개인정보취급방침</p>
