--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/xpressengine/xeicon@2.3.3/xeicon.min.css"
     />
-    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/visual.css" />
     <link rel="stylesheet" href="./css/ani.css" />
     <link rel="stylesheet" href="./css/content.css" />
   </head>
@@ -338,6 +338,6 @@
         });
     </script>
     <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
