메인페이지 완성

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <em
                       >언제 어디서나 고객이 안심하고 선택할 수 있는 기업,
                       사조입니다.</em
-                    >
+                    ><br /><br />
                     <span
                       >고객에게 믿음을 드리는
                       <strong>엄격한 품질 관리</strong></span
@@ -52,6 +52,31 @@
                     노력합니다.
                   </p>
                 </div>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/banner_visual_03.jpg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/banner_visual_04.jpg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/banner_visual_05.jpg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/banner_visual_06.jpg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/banner_visual_07.jpg" alt=""
+                /></a>
               </li>
             </ul>
             <div class="pagination-btn">
