--- a/header.html
+++ b/header.html
@@ -16,9 +16,7 @@
       <div class="depth-bg"></div>
       <div class="header">
         <h1 class="logo">
-          <a href="https://www.sajo.co.kr/"
-            ><img src="./images/logo.jpg" alt="logo"
-          /></a>
+          <a href="./index.html"><img src="./images/logo.jpg" alt="logo" /></a>
         </h1>
         <nav class="nav">
           <ul class="gnb">
