--- a/index.html
+++ b/index.html
@@ -19,72 +19,57 @@
       <header id="header"></header>
       <main id="main">
         <div id="visual">
-          <div class="ul-wrap">
-            <ul class="scroll">
-              <li>
-                <div class="inner">
-                  <div class="text">
-                    <em
-                      >언제 어디서나 고객이 안심하고 선택할 수 있는 기업,
-                      사조입니다.</em
-                    ><br /><br />
-                    <span
-                      >고객에게 믿음을 드리는
-                      <strong>엄격한 품질 관리</strong></span
-                    >
-                    <p>
-                      고객의 안전하고 건강한 생활을 위한 엄격한 품질 관리와 가장
-                      좋은 원료를 신선하고 위생적으로 가공하여<br />
-                      최고의 맛을 선사하겠다는 의지와 열정은 사조 가족의
-                      소명입니다.
-                    </p>
-                  </div>
-                </div>
-              </li>
-              <li>
+          <ul class="scroll">
+            <li>
+              <div class="inner">
                 <div class="text">
-                  <strong>나눔과 사회공헌활동을<br />실천하는 사조</strong>
+                  <em
+                    >언제 어디서나 고객이 안심하고 선택할 수 있는 기업,
+                    사조입니다.</em
+                  ><br /><br />
+                  <span
+                    >고객에게 믿음을 드리는
+                    <strong>엄격한 품질 관리</strong></span
+                  >
                   <p>
-                    사조그룹의 경영철학인 도전, 신뢰, 열정을<br />
-                    바탕으로 사회적, 환경적 관심사를 분석,<br />수용하고
-                    사회에서 기대하는 사회적 의무를<br />
-                    다하기 위하여 사회공헌활동을<br />기업의 경영활동에 수용,
-                    노력합니다.
+                    고객의 안전하고 건강한 생활을 위한 엄격한 품질 관리와 가장
+                    좋은 원료를 신선하고 위생적으로 가공하여<br />
+                    최고의 맛을 선사하겠다는 의지와 열정은 사조 가족의
+                    소명입니다.
                   </p>
                 </div>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="./images/banner_visual_03.jpg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="./images/banner_visual_04.jpg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="./images/banner_visual_05.jpg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="./images/banner_visual_06.jpg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="./images/banner_visual_07.jpg" alt=""
-                /></a>
-              </li>
-            </ul>
-            <div class="pagination-btn">
-              <span class="on"></span>
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
+              </div>
+            </li>
+            <li>
+              <div class="text">
+                <strong>나눔과 사회공헌활동을<br />실천하는 사조</strong>
+                <p>
+                  사조그룹의 경영철학인 도전, 신뢰, 열정을<br />
+                  바탕으로 사회적, 환경적 관심사를 분석,<br />수용하고 사회에서
+                  기대하는 사회적 의무를<br />
+                  다하기 위하여 사회공헌활동을<br />기업의 경영활동에 수용,
+                  노력합니다.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a href="#"><img src="./images/banner_visual_03.jpg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/banner_visual_04.jpg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/banner_visual_05.jpg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/banner_visual_06.jpg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/banner_visual_07.jpg" alt="" /></a>
+            </li>
+          </ul>
+          <div class="pagination">
+            <!-- span -->
           </div>
           <div class="arrow">
             <div class="inner">
